1. show last set value 2. check for system being mounted RW

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context="ru.gmixaz.micmix.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <Button
         android:id="@+id/button"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mount system RW"
-        android:layout_centerInParent="true"
         />
     <LinearLayout
         android:id="@+id/line3"
         android:orientation="horizontal"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn3"
+            android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Write mixer_paths.xml"
+            android:text="Write"
             />
 
         <EditText
             android:id="@+id/edit3"
+            android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -40,37 +42,35 @@
     <LinearLayout
         android:id="@+id/line2"
         android:orientation="horizontal"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/line3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn2"
+            android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Write mixer_paths.xml"
+            android:text="Write"
             />
         <EditText
             android:id="@+id/edit2"
+            android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
     </LinearLayout>
     <Button
         android:id="@+id/reboot"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/line2"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reboot"
         />
     <TextView
         android:textColor="#FF0000"
+        android:textSize="20sp"
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         />
 
-</RelativeLayout>
+</LinearLayout>
